<resources>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="app_name">FedditAndroid</string>
    <string name="feddit">Feddit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register_here">Don\'t have account? Register here!</string>
    <string name="fullname">FullName</string>
    <string name="register">Register</string>
    <string name="have_a_account_already_login_here">Have a account already? Login here!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

    <string-array name="sort_options">
        <item>likeCounter</item>
        <item>postTitle</item>
        <item>userPostID</item>
    </string-array>

<!--    <string-array name="sort_options">-->
<!--        <item>likeCounter</item>-->
<!--        <item>postTitle</item>-->
<!--        <item>userPostID</item>-->
<!--        <item>timestamp</item>-->
<!--    </string-array>-->

</resources>