<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBarLoginID"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/logoID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/feddit"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailLoginID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoID"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/passwordLoginID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginID"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/emailLoginLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/emailLoginID"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/emailLoginID"
        app:layout_constraintStart_toStartOf="@+id/emailLoginID"
        app:layout_constraintTop_toBottomOf="@+id/logoID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/passwordLoginLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/passwordLoginID"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/passwordLoginID"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginID"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginID"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/loginButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginID" />

    <Button
        android:id="@+id/registerPageButtonID"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_account_register_here"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonID" />

</androidx.constraintlayout.widget.ConstraintLayout>